--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
-name: IPO All-in-One Bot
+name: IPO Bot (with Trade Time)
 
 on:
   schedule:
-    # รอบที่ 1: 10:15 น. (ไทย)
+    # รอบ 1: 10:15 น. ไทย (เช็คหุ้นไทยเปิด)
     - cron: '15 3 * * *'
-    # รอบที่ 2: 22:15 น. (ไทย)
+    # รอบ 2: 22:15 น. ไทย (เช็คหุ้น US เริ่มเข้า)
     - cron: '15 15 * * *'
+    # รอบ 3: 01:15 น. ไทย (เช็คหุ้น US ที่เปิดดึก/สรุปยอด)
+    - cron: '15 18 * * *'
   workflow_dispatch:
 
 jobs:
