--- a/.github/workflows/ipo-bot.yml
+++ b/.github/workflows/ipo-bot.yml
@@ -1,18 +1,17 @@
-name: IPO Trading Bot (Daily Run)
+name: IPO Bot Runner
 
 on:
   schedule:
-    # รันทุกวันจันทร์-ศุกร์ เวลา 09:00, 12:00, 15:00 (เวลา UTC) 
-    # ปรับตามเวลาตลาดที่คุณเทรด
-    - cron: '0 2,5,8 * * 1-5' 
-  workflow_dispatch: # ปุ่มกดรันเองเพื่อทดสอบ
+    - cron: '0 2,5,8 * * 1-5' # รันตามเวลาที่ต้องการ
+  workflow_dispatch:
 
 jobs:
   run-ipo-logic:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      # --- ส่วนที่ต้องเพิ่มเพื่อให้หาไฟล์เจอ ---
+      - name: Checkout Repository Code
+        uses: actions/checkout@v4 
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -20,13 +19,12 @@ jobs:
           python-version: '3.10'
 
       - name: Install Dependencies
-        run: |
-          pip install yfinance pandas requests supabase
+        run: pip install yfinance pandas requests supabase
 
       - name: Execute Bot
         env:
-          # ดึงค่าจาก GitHub Secrets
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        # มั่นใจว่าใช้ชื่อไฟล์ bot_ipo.py ตามที่คุณยืนยัน
         run: python bot_ipo.py
