--- a/.github/workflows/global_auto.yml
+++ b/.github/workflows/global_auto.yml
@@ -1,4 +1,4 @@
-name: Global Trading Automation
+name: Global Multi-Market Automation
 
 on:
   schedule:
@@ -16,11 +16,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: Install
+      - name: Install Dependencies
         run: |
           pip install requests playwright yfinance supabase pandas lxml
           playwright install chromium
-      - name: Execute
+      - name: Execute System
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
