--- a/.github/workflows/fav_sniper.yml
+++ b/.github/workflows/fav_sniper.yml
@@ -23,4 +23,5 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          TEST_MODE: ${{ secrets.TEST_MODE }}
         run: python 03_fav_monitor.py
