--- a/.github/workflows/fav_sniper.yml
+++ b/.github/workflows/fav_sniper.yml
@@ -22,6 +22,6 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_WEBHOOK_FAVOURITE: ${{ secrets.DISCORD_WEBHOOK_FAVOURITE }}
           TEST_MODE: ${{ secrets.TEST_MODE }}
         run: python 03_fav_monitor.py
